# URL-Shortening-Service

backend/: pyproject.toml  run.py
backend/app/: __init__.py  extensions.py
backend/app/api/v1/endpoints/: url.py
backend/app/api/v1/schemas/: url.py
backend/app/models/: url.py
backend/app/persistence/: abstract.py  repository.py
backend/app/service/: facade.py
